--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,10 +56,17 @@ dependencies:
   fpdart: ^1.1.0
   animated_snack_bar: ^0.4.0
   shared_preferences: ^2.3.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  cached_network_image: ^3.4.1
+  syncfusion_flutter_pdfviewer: ^27.1.52
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
